--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^3.1.0",
     "element-ui": "^2.4.0",
     "pug": "^2.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.16",
+    "vue-echarts-v3": "^1.0.19",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
