--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "echarts": "^3.1.0",
     "element-ui": "^2.4.0",
+    "moment": "^2.22.2",
     "pug": "^2.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
